# translate_subtitle_proxy

./: Readme.md  main.py  pyproject.toml
