[tool.poetry]
name = "translate_proxy"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dmitriy@bessalov.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = {extras = ["socks"], version = "^2.26.0"}
googletrans = "3.1.0a0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
